--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "fis-preprocessor-jserrormonitor",
   "version": "0.0.0",
-  "description": "js error monitor for dp.baidu.com",
+  "description": "js error monitor for fis2",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
