--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "fis-preprocessor-jserrormonitor",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "description": "js error monitor for fis2",
   "main": "index.js",
   "scripts": {
@@ -17,8 +17,8 @@
     "error"
   ],
   "author": {
-	name: "Lone",
-	email: "chenguoliang@baidu.com"
+	"name": "Lone",
+	"email": "chenguoliang@baidu.com"
   },
   "license": "MIT",
   "bugs": {
